refactor pathVariablesMapper